2008-06-13  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.AspNet/AspNetAppProject.cs: Fix a logic error that caused
	  an exception when creating a new file group with a CodeBehind file
	  but no designer file.
	* Templates/WebApplication.xpt.xml: Move event hander to the user code
	  class, not the designer class. Add protected button member because
	  some languagee bindings can't auto-add it. Fixes "Bug 400301 -
	  [Regression] The default VB Asp.Net template fails to compile".

2008-06-10  Michael Hutchinson <mhutchinson@novell.com> 

	* Templates/WebService-CodeBehind.xft.xml,
	  Templates/WebHandler-CodeBehind.xft.xml,
	  Templates/WebForm-CodeBehindNonPartial.xft.xml,
	  Templates/WebForm-CodeBehind.xft.xml,
	  Templates/WebControl-CodeBehindNonPartial.xft.xml,
	  Templates/WebControl-CodeBehind.xft.xml,
	  Templates/MasterPage-CodeBehindNonPartial.xft.xml,
	  Templates/GlobalAsax-CodeBehind.xft.xml,
	  Templates/MasterPage-CodeBehind.xft.xml: Set grouping/dependencies
	  on new files.
	* MonoDevelop.AspNet/AspNetAppProject.cs: Set grouping dependencies on
	  added files, and auto-add parents/children.

2008-06-10  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.AspNet.Parser/AspNetCompilationUnit.cs: Remove old
	  CodeBehind grouping mechanism.

2008-06-10  Andres G. Aragoneses <aaragoneses@novell.com> 

	* MonoDevelop.AspNet/AspNetAppProject.cs: Implement feature to allow
	  unmanaged project references in a managed project (bug#397490).

2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.AspNet.addin.xml: Bump MD version.

2008-06-02  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.AspNet/AspNetAppProjectConfiguration.cs: Fix path of
	  compiled output assembly.

2008-05-28  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.AspNet/AspNetAppProject.cs: Fixes for ASP.NET projects
	  with new project model.
	* Templates/WebApplication.xpt.xml: Add some "Hello World"-type code to